tests/integration/snapshots/integration__completion__latex__citation_open_brace.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, tex_uri, 3, 9)?"

---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "FooBar",
      "kind": 1,
      "documentation": {
        "kind": "markdown",
        "value": "Bar, F. (2019). *Baz Qux*."
      },
      "preselect": false,
      "sortText": "00 FooBar @articleFooBar author Foo Bar title Baz Qux year 2019",
      "filterText": "FooBar @articleFooBar author Foo Bar title Baz Qux year 2019",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 6
          },
          "end": {
            "line": 3,
            "character": 9
          }
        },
        "newText": "FooBar"
      }
    }
  ]
}
